# substitution-cipher-breaker

./: README.md  pyproject.toml  reverse_decrypt.py
brute-force-dictionary/: README.md
monte-carlo-improved/: README.md  bigram_frequency_matrix.py  corpus_parser.py  decryption_scorer.py  substitution_cipher_breaker.py  substitution_key.py
substitution-cipher-breaker/data/: bigram_counts.json  ciphertexts.py
substitution-cipher-breaker/historical/brute-force-dictionary/: README.md  reverse_decrypt.py
substitution-cipher-breaker/historical/monte-carlo/: README.md  diaconis.py
substitution-cipher-breaker/monte_carlo_improved/: README.md  __init__.py  __main__.py  bigram_frequency_matrix.py  bigram_scorer.py  decryption.py  decryption_scorer.py  markov_chain.py  markov_chain_visitor.py  ngram_parser.py  progress_context_manager.py  substitution_cipher_breaker.py  substitution_key.py
